<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name" />

    <EditText
        android:id="@+id/loginemailEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/e_mail_for_signup"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/loginpwdEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <EditText
        android:id="@+id/loginpwdEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginemailEditText"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        android:hint="@string/password_for_sign_up"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="@dimen/btn_ht"
        android:text="@string/log_in_btn_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginpwdEditText"
        app:layout_constraintBottom_toTopOf="@+id/forgotpwdButton"
        android:background="@drawable/custom_button"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/forgotpwdButton"
        android:layout_width="200dp"
        android:layout_height="@dimen/btn_ht"
        android:text="@string/forgot_password_btn_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintBottom_toTopOf="@+id/signupTextView"
        android:background="@drawable/custom_button"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/signupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
</androidx.constraintlayout.widget.ConstraintLayout>