<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity">

    <TextView
        android:id="@+id/pwdselectedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_selected"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/rsnselectedTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/rsnselectedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reason"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pwdselectedTextView"
        app:layout_constraintBottom_toTopOf="@id/updButton"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/updButton"
        android:layout_width="200dp"
        android:layout_height="@dimen/btn_ht"
        android:text="@string/update"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rsnselectedTextView"
        app:layout_constraintBottom_toTopOf="@id/delButton"
        android:background="@drawable/custom_button"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/delButton"
        android:layout_width="200dp"
        android:layout_height="@dimen/btn_ht"
        android:text="@string/delete"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/updButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/custom_button"
        android:textColor="#ffffff"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat"
        app:title="@string/app_name" />

</androidx.constraintlayout.widget.ConstraintLayout>